# cqrs-demo

./: Cargo.toml
db/: create_tables.sh  dynamo_db.yaml
src/: config.rs  state.rs
