[package]
name = "cqrs-demo"
version = "0.4.8"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A demo application for cqrs-es crate."
documentation = "https://docs.rs/cqrs-demo"
repository = "https://github.com/serverlesstechnology/cqrs-demo"
readme = "README.md"
publish = false
default-run = "cqrs-demo"

[dependencies]
cqrs-es = "0.4.8"
dynamo-es = { git = "https://github.com/wadedos/dynamo-es.git", branch = "master" }

async-trait = "0.1"
axum = "0.6"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "^0.4.20", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = "0.4.0"
lambda_http = "0.8.0"
aws-sdk-dynamodb = "0.27.0"
aws-config = "0.55.2"

[[bin]]
name = "cqrs-demo"
path = "src/main.rs"

[[bin]]
name = "bootstrap"
path = "src/lambda_main.rs"
